--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,8 +1,8 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: hsl(0 0% 97.65%);
+  --foreground:  hsl(0 0% 12.55%);
 }
 
 @theme inline {
@@ -10,12 +10,26 @@
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
+  --animate-fade-in: fadeIn .2s linear forwards;
+  --animate-fade-out: fadeOut .2s linear forwards;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: hsl(0 0% 6.67%);
+    --foreground: hsl(0 0% 93.33%);
+  }
+}
+
+@keyframes fadeIn{
+  to {
+    opacity: 100%;
+  }
+}
+@keyframes fadeOut{
+  to {
+    opacity: 0%;
+    display: none;
   }
 }
 
